--- a/login.html
+++ b/login.html
@@ -66,7 +66,8 @@ span.novousuario {
     <label for="psw"><b>Senha</b></label>
     <input type="password" placeholder="Insira aqui sua Senha" name="psw" required>
         
-    <button type="submit">Login</button>
+     <button type="submit"><a href="index.html">
+      Login</a></button>
     <label>
       <input type="checkbox" checked="checked" name="lembre-se"> Lembre-se de mim
     </label>
