--- a/normalGameWorking.html
+++ b/normalGameWorking.html
@@ -22,7 +22,7 @@
   </div>
   <div class="popup" onclick="myFunction()"> <br><br> Reiniciar?
     <span class="popuptext" id="myPopup">Deseja recomeçar o jogo? Seu progresso será perdido.
-      <a href="index.html"><p style="color:white">Reiniciar</p>
+      <a href="normalGameWorking.html"><p style="color:white">Reiniciar</p>
       </a>
     </span>
   </div>
