--- a/gameFrontEnd.html
+++ b/gameFrontEnd.html
@@ -41,8 +41,8 @@
 </div>
   <div class="centerText">
     <h4>Deseja recomeçar o jogo? Seu progresso será perdido.
-      <a href="escolha.html"><p style="color:black">Reiniciar</p>
-        <a href="index.html"> Voltar à escolha de modo</a>
+      <a href="gameFrontEnd.html"><p style="color:black">Reiniciar</p>
+        <a href="escolha.html"> Voltar à escolha de modo</a>
       </a>
       </a>
   </div>
