--- a/gameFrontEndTimed.html
+++ b/gameFrontEndTimed.html
@@ -42,8 +42,8 @@
   </div>
   <div class="centerText">
     <h4>Deseja recomeçar o jogo? Seu progresso será perdido.
-      <a href="escolha.html"><p style="color:black">Reiniciar <br>
-        <a href="index.html"> Voltar à escolha de modo</a>
+      <a href="gameFrontEndTimed.html"><p style="color:black">Reiniciar</p>
+        <a href="escolha.html"> Voltar à escolha de modo</a>
       </a>
   </div>
     </h4>
