--- a/login.html
+++ b/login.html
@@ -2,57 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #ffffff;}
-
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-button {
-  background-color: #6aa3ec;
-  color: #fafafa;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-.cancelar {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #e62d0d;
-}
-
-.container {
-  padding: 16px;
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-span.novousuario {
-  float: left;
-  padding-top: 16px;
-}
-  .cancelar {
-     width: 100%;
-  }
-
-</style>
+  <link href="style2.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
