--- a/escolha.html
+++ b/escolha.html
@@ -9,20 +9,56 @@
 </head>
 
 <body>
-  <h2>
+  <h1>
     <div class="centerText"> 
-    Jogo da memória: colete todos os tesouros!
-    <br><br>
+      Jogo da memória: colete todos os tesouros!<br><br>
+    </div>
+  </h1>
+  
+  <h2>
+    <div class="container2":
+      <div class="centerText"> 
+        Modo
+      </div>
     </div>
   </h2>
-  <h3>
-    <div class="centerText">
-     Selecione o modo:<br>
-     <a href='gameFrontEnd.html'> Normal </a>
-    ou
-     <a href='gameFrontEndTimed.html'> Com tempo </a>
-  </h3>
-    </div>
+    
+    <h3>
+      <div class="container2">
+        <li class="button">
+          Clássico <br><br>
+          <div class="container3">
+             <a href='gameFrontEnd2x2.html'> 2x2 </a>
+          </div>
+          <div class="container3">
+            <a href='gameFrontEnd4x4.html'> 4x4 </a>
+          </div>
+          <div class="container3">
+            <a href='gameFrontEnd6x6.html'> 6x6 </a>
+          </div>
+          <div class="container3">
+            <a href='gameFrontEnd8x8.html'> 8x8 </a>
+          </div>
+        <li class="button">
+           Contra o Tempo<br><br>
+          <div class="container3">
+             <a href='gameFrontEndTimed2x2.html'> 2x2 </a>
+          </div>
+          <div class="container3">
+            <a href='gameFrontEndTimed4x4.html'> 4x4 </a>
+          </div>
+          <div class="container3">
+            <a href='gameFrontEndTimed6x6.html'> 6x6 </a>
+          </div>
+          <div class="container3">
+            <a href='gameFrontEndTimed8x8.html'> 8x8 </a>
+          </div>
+          </li>
+        </div>
+      </div>
+    </h3>
+        
+
 
   <script src="script.js"></script>
 
