--- a/LOG+CONTA.html
+++ b/LOG+CONTA.html
@@ -27,7 +27,7 @@
 
   <div class="container" style="background-color:#ccc">
     <button type="button" class="cancelar">Cancelar</button>
-    <span class="psw">Esqueci a <a href="#">Senha?</a></span>
+    <span class="psw">Esqueci a <a href="esqueciasenha.html">Senha?</a></span>
     <span class="novousuario">Não possuo conta? <a href="#"><button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Criar Nova</button></a></span>
   </div>
  
