--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 
   <div class="container" style="background-color:#ccc">
     <button type="button" class="cancelar">Cancelar</button>
-    <span class="psw">Esqueci a <a href="#">Senha?</a></span>
+    <span class="psw">Esqueci a <a href="esqueciasenha.html">Senha?</a></span>
     <span class="novousuario">Não possuo conta? <a href="#">Criar Nova</a></span>
   </div>
 </form>
