--- a/gameFrontEndTimed4x4.html
+++ b/gameFrontEndTimed4x4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
   <meta charset="utf-8">
@@ -38,13 +38,14 @@
     <br><br><a href="history.html">Histórico</a>
       <br><br><a href="ranking.html">Ranking Global</a>
       <br><br><a href="editarInfo.html">Editar Informações</a>
-      <br><br><button onclick="devMode()">Trapaça</button>
+      <br><br><button onclick="devModeOn()">Trapaça</button>
+    <br><br><button onclick="devModeOff()">Desligar trapaça</button> <br><br>
   </div>
-    </h4>
+
 
   <script src="script.js"></script>
 
-  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
+
 </body>
 
 </html>
