--- a/history.html
+++ b/history.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>ranking global</title>
+  <title>Histórico</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="script.js"></script>
 </head>
 
 <body>
   <div class="centerText">
-  <h1>Ranking Global</h1>
-    <h3>
+  <h1>Histórico</h1>
+ 
     <table class="center">
       <tr>
         <td>Nome</td>
@@ -23,145 +23,144 @@
         <td>Data e hora</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>217 segundos</td> 
+        <td>Venceu</td>
+        <td>18:28 22/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Normal</td> 
+        <td>222 segundos</td> 
+        <td>Venceu</td>
+        <td>16:56 22/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>250 segundos</td> 
+        <td>Venceu</td>
+        <td>14:32 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>289 segundos</td> 
+        <td>Venceu</td>
+        <td>14:26 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
       <tr>
-        <td>        </td>
-        <td></td>
-        <td></td> 
-        <td></td> 
-        <td></td>
-        <td></td>
+        <td>Pedro H. Cabral</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>290 segundos</td> 
+        <td>Venceu</td>
+        <td>14:14 20/09/2022</td>
       </tr>
     </table>
   </div>
-  </h3>
+
 </body>
 
 </html>
