--- a/history.html
+++ b/history.html
@@ -4,159 +4,81 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Histórico</title>
+  <title>ranking global</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="script.js"></script>
 </head>
 
 <body>
   <div class="centerText">
-  <h1>Histórico</h1>
- 
+  <h1>Ranking Global</h1>
+  
     <table class="center">
       <tr>
-        <td>Nome</td>
+        <td>Username</td>
         <td>Tabuleiro</td>
         <td>Modalidade</td> 
         <td>Tempo Gasto</td> 
-        <td>Resultado</td>
-        <td>Data e hora</td>
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Nectar</td>
         <td>8x8</td>
         <td>Timed</td> 
         <td>217 segundos</td> 
-        <td>Venceu</td>
-        <td>18:28 22/09/2022</td>
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Shii</td>
         <td>8x8</td>
         <td>Normal</td> 
         <td>222 segundos</td> 
-        <td>Venceu</td>
-        <td>16:56 22/09/2022</td>
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Ferfs</td>
         <td>8x8</td>
         <td>Timed</td> 
-        <td>250 segundos</td> 
-        <td>Venceu</td>
-        <td>14:32 20/09/2022</td>
+        <td>269 segundos</td> 
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Nectar</td>
         <td>8x8</td>
         <td>Timed</td> 
-        <td>289 segundos</td> 
-        <td>Venceu</td>
-        <td>14:26 20/09/2022</td>
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Nectar</td>
         <td>8x8</td>
         <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Nectar</td>
         <td>8x8</td>
         <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Nectar</td>
         <td>8x8</td>
         <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Nectar</td>
         <td>8x8</td>
         <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Nectar</td>
         <td>8x8</td>
         <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td>Pedro H. Cabral</td>
+        <td>Nectar</td>
         <td>8x8</td>
         <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
-      </tr>
-      <tr>
-        <td>Pedro H. Cabral</td>
-        <td>8x8</td>
-        <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
-      </tr>
-      <tr>
-        <td>Pedro H. Cabral</td>
-        <td>8x8</td>
-        <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
-      </tr>
-      <tr>
-        <td>Pedro H. Cabral</td>
-        <td>8x8</td>
-        <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
-      </tr>
-      <tr>
-        <td>Pedro H. Cabral</td>
-        <td>8x8</td>
-        <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
-      </tr>
-      <tr>
-        <td>Pedro H. Cabral</td>
-        <td>8x8</td>
-        <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
-      </tr>
-      <tr>
-        <td>Pedro H. Cabral</td>
-        <td>8x8</td>
-        <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
-      </tr>
-      <tr>
-        <td>Pedro H. Cabral</td>
-        <td>8x8</td>
-        <td>Timed</td> 
-        <td>290 segundos</td> 
-        <td>Venceu</td>
-        <td>14:14 20/09/2022</td>
+        <td>271 segundos</td>  
       </tr>
     </table>
   </div>
