--- a/escolha.html
+++ b/escolha.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
   <meta charset="utf-8">
@@ -9,22 +9,24 @@
 </head>
 
 <body>
-  <h1>
     <div class="centerText"> 
-      Jogo da memória: colete todos os tesouros!<br><br>
+      <h1>
+      Jogo da memória: colete todos os tesouros!
+         </h1>
+      <br><br>
     </div>
-  </h1>
   
-  <h2>
-    <div class="container2":
+    <div class="container2">
       <div class="centerText"> 
+        <h2>
         Modo
+        </h2>
       </div>
     </div>
-  </h2>
-    
-    <h3>
-      <div class="container2">
+ 
+    <br><br>
+
+      <ol class="container2">
         <li class="button">
           Clássico <br><br>
           <div class="container3">
@@ -54,15 +56,14 @@
             <a href='gameFrontEndTimed8x8.html'> 8x8 </a>
           </div>
           </li>
-        </div>
-      </div>
-    </h3>
+        </ol>
+
         
 
 
   <script src="script.js"></script>
 
-  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
+
 </body>
 
 </html>
