--- a/ranking.html
+++ b/ranking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <body>
   <div class="centerText">
   <h1>Ranking Global</h1>
-    <h3>
+  
     <table class="center">
       <tr>
         <td>Username</td>
@@ -21,68 +21,68 @@
         <td>Tempo Gasto</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Nectar</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>217 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Shii</td>
+        <td>8x8</td>
+        <td>Normal</td> 
+        <td>222 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Ferfs</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>269 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Nectar</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Nectar</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Nectar</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Nectar</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Nectar</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Nectar</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>271 segundos</td> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td> 
-        <td></td> 
+        <td>Nectar</td>
+        <td>8x8</td>
+        <td>Timed</td> 
+        <td>271 segundos</td>  
       </tr>
     </table>
   </div>
-  </h3>
+
 </body>
 
 </html>
