--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
       <input type="text" placeholder="dd/mm/aaaa" name="date" required>
       <br>
       <label for="cpf"><b>CPF</b></label>
-      <input type="number" placeholder="Insira seu CPF" name="cpfform" required>
+      <input type="text" placeholder="Insira seu CPF" name="cpfform" required>
       <br>
       <label for="telefone"><b>Telefone</b></label>
       <input type="text" placeholder="(xx) xxxxx-xxxx" name="phnumber" required>
       <br>
       <label for="email"><b>E-mail</b></label>
-      <input type="email" placeholder="Insira seu e-mail" name="email" required>
+      <!--<input type="email" placeholder="Insira seu e-mail" name="email" required>-->
+      <input type="text" placeholder="Insira seu e-mail" name="email" required>
       <br>
       <label for="user"><b>Usuário</b></label>
       <input type="text" placeholder="Nome de usuário" name="username" required>
