--- a/newconta.html
+++ b/newconta.html
@@ -12,7 +12,7 @@
   <form class="modal-content" action="/action_page.php">
     <div class="container">
       <h1>Registre-se</h1>
-      <p>Please fill in this form to create an account.</p>
+      <p>Preencha para Criar uma nova conta.</p>
       <hr>
       <label for="email"><b>Email</b></label>
       <input type="text" placeholder="Enter Email" name="email" required>
