--- a/newconta.html
+++ b/newconta.html
@@ -3,7 +3,7 @@
     <link href="style2.css" rel="stylesheet" type="text/css" />
 <body>
 
-<h2>Modal Signup Form</h2>
+<h2>Formulario de Criação de conta</h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
 
